--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jms-client-bom</artifactId>
-			<version>8.0.0.Beta1</version>
+			<version>8.0.0.Final</version>
 			<type>pom</type>
 		</dependency>
 
@@ -154,7 +154,7 @@
             <plugin>
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
-				<version>1.0.0.Beta1</version>
+				<version>1.0.1.Final</version>
 				<configuration>
                     <skip>true</skip>
                 </configuration>
