--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -20,6 +20,11 @@
 		<version>0.1-SNAPSHOT</version>
 	</dependency>
 	<dependency>
+    <groupId>org.fiteagle</groupId>
+    <artifactId>api</artifactId>
+    <version>0.1-SNAPSHOT</version>
+  </dependency>
+	<dependency>
 		<groupId>org.fiteagle</groupId>
 		<artifactId>aaa</artifactId>
 		<version>0.1-SNAPSHOT</version>
