--- a/usermanagement/pom.xml
+++ b/usermanagement/pom.xml
@@ -12,12 +12,22 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
-  <dependencies>
-<!--     <dependency> -->
-<!--       <groupId>org.fiteagle</groupId> -->
-<!--       <artifactId>persistence</artifactId> -->
-<!--       <version>0.1-SNAPSHOT</version> -->
-<!--     </dependency> -->
-  </dependencies>
+
+	<dependencies>
+		<dependency>
+			<groupId>net.iharder</groupId>
+			<artifactId>base64</artifactId>
+			<version>2.3.8</version>
+		</dependency>
+		<dependency>
+      <groupId>org.fiteagle</groupId>
+      <artifactId>api</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>   
+    <dependency>
+      <groupId>org.fiteagle</groupId>
+      <artifactId>config</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>   
+	</dependencies>
 </project>
