--- a/resourcerepository/pom.xml
+++ b/resourcerepository/pom.xml
@@ -39,6 +39,7 @@
             <plugin>
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.0.1.Final</version>
 				<configuration>
                     <skip>false</skip>
                     <filename>${project.build.finalName}.war</filename>
@@ -68,3 +69,6 @@
         </profile>
 </profiles>
 </project>
+
+
+
