--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <groupId>org.fiteagle.core</groupId>
-  <artifactId>resourcerepository</artifactId>
+  <artifactId>repo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>FITeagle :: Core :: Resource Repository</name>
@@ -42,7 +42,7 @@
   </dependencies>
 
     <build>
-        <finalName>core-resourcerepository</finalName>
+        <finalName>repo</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
