--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -40,12 +40,14 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.3.175</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.3.1.Final</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -58,15 +60,6 @@
 			<artifactId>jboss-ejb-api_3.1_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
-
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.jboss.spec.javax.ejb</groupId> -->
-		<!-- <artifactId>jboss-ejb-api_3.2_spec</artifactId> -->
-		<!-- <version>1.0.0.Final</version> -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
 
 	</dependencies>
 
