--- a/aaa/pom.xml
+++ b/aaa/pom.xml
@@ -1,35 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.fiteagle</groupId>
-    <artifactId>core</artifactId>
-    <version>0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>aaa</artifactId>
-  <packaging>jar</packaging>
-  <name>FITeagle :: AAA</name>
-   
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  <dependencies>
-    
-    <dependency>
-      <groupId>org.fiteagle</groupId>
-      <artifactId>config</artifactId>
-      <version>0.1-SNAPSHOT</version>
-    </dependency>    
-    <dependency>
-      <groupId>org.fiteagle</groupId>
-      <artifactId>api</artifactId>
-      <version>0.1-SNAPSHOT</version>
-    </dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.fiteagle</groupId>
+		<artifactId>core</artifactId>
+		<version>0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>aaa</artifactId>
+	<packaging>jar</packaging>
+	<name>FITeagle :: AAA</name>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>org.fiteagle</groupId>
+			<artifactId>config</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fiteagle</groupId>
+			<artifactId>api</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
 			<version>1.5.4</version>
-		</dependency> 
-		    
-  </dependencies>
+		</dependency>
+		<dependency>
+			<groupId>net.iharder</groupId>
+			<artifactId>base64</artifactId>
+			<version>2.3.8</version>
+		</dependency>
+
+	</dependencies>
 </project>
