--- a/bus/src/main/webapp/WEB-INF/web.xml
+++ b/bus/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
   
+  	<!--  just for the REST API -->
     <servlet-mapping>
         <servlet-name>javax.ws.rs.core.Application</servlet-name>
         <url-pattern>/api/*</url-pattern>
