--- a/usermanagement/pom.xml
+++ b/usermanagement/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<artifactId>usermanagement</artifactId>
 	<packaging>war</packaging>
-	<name>FITeagle :: Usermanagement</name>
+	<name>FITeagle :: Core :: Usermanagement</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
