--- a/usermanagement/pom.xml
+++ b/usermanagement/pom.xml
@@ -34,7 +34,8 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.3.175</version>
+			<version>1.4.178</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -43,18 +44,13 @@
 			<version>2.2.4</version>
 		</dependency>
 	    
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.1.Final</version>
+			<version>4.3.5.Final</version>
+			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-json</artifactId>
-			<version>1.17</version>
-		</dependency>
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
 			<artifactId>jboss-ejb-api_3.1_spec</artifactId>
