--- a/aaa/pom.xml
+++ b/aaa/pom.xml
@@ -36,6 +36,10 @@
 			<artifactId>base64</artifactId>
 			<version>2.3.8</version>
 		</dependency>
-
+    <dependency>
+	    <groupId>org.bouncycastle</groupId>
+    	<artifactId>bcpkix-jdk15on</artifactId>
+	    <version>1.50</version>
+    </dependency>
 	</dependencies>
 </project>
