--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
 target/
+.classpath
 .project
 .settings/
+.idea/
+
+*.iml
+
+# Eclipse
 .classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
+*~
