--- a/repo/src/main/webapp/WEB-INF/web.xml
+++ b/repo/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 xmlns="http://java.sun.com/xml/ns/javaee" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-version="3.0">
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd" 
+version="3.1">
   
-    <servlet-mapping>
-        <servlet-name>javax.ws.rs.core.Application</servlet-name>
-        <url-pattern>/api/*</url-pattern>
-    </servlet-mapping>
+   <listener>
+        <listener-class>
+                 org.fiteagle.core.repo.dm.ResourceRepoMDBSender
+        </listener-class>
+    </listener>
   
 </web-app>
