new westbound module for reservation

--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,6 @@
         <module>aaa</module>
         <module>repo</module>
         <module>bus</module>
+        <module>reservation</module>
 	</modules>
 </project>
