--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <module>usermanagement</module>
         <module>config</module>
         <module>aaa</module>
-        <module>repo</module>
         <module>bus</module>
+        <module>repository</module>
         <module>reservation</module>
 	</modules>
 </project>
