--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -4,7 +4,7 @@
 
 	<name>FITeagle :: Core :: Resource Repository</name>
 	<groupId>org.fiteagle.core</groupId>
-	<artifactId>repo</artifactId>
+	<artifactId>repository</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -15,7 +15,7 @@
 	</parent>	
 
 	<build>
-		<finalName>repo</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
