new utility module for tripletstore access, refactored poms

--- a/usermanagement/pom.xml
+++ b/usermanagement/pom.xml
@@ -13,7 +13,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.fiteagle</groupId>
+			<groupId>org.fiteagle.core</groupId>
 			<artifactId>aaa</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
