--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,11 @@
 	</dependencies>
 
 	<modules>
-        <module>usermanagement</module>
         <module>config</module>
         <module>aaa</module>
+        <module>usermanagement</module>
         <module>bus</module>
+        <module>tripletStoreAccessor</module>
         <module>repository</module>
         <module>reservation</module>
 	</modules>
