--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -5,7 +5,7 @@
 	<name>FITeagle :: Core :: Resource Repository</name>
 	<groupId>org.fiteagle.core</groupId>
 	<artifactId>repository</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<parent>
@@ -13,6 +13,14 @@
 		<artifactId>core</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>	
+
+  <dependencies>
+    <dependency>
+    <groupId>org.fiteagle.core</groupId>
+    <artifactId>tripletStoreAccessor</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
