--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
         <module>tripletStoreAccessor</module>
         <module>repository</module>
         <module>reservation</module>
-	</modules>
+    <module>orchestrator</module>
+  </modules>
 </project>
