--- a/reservation/pom.xml
+++ b/reservation/pom.xml
@@ -23,7 +23,7 @@
   </dependencies>
 
 	<build>
-		<finalName>reservation</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
