added maven deployment to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   global:
   - secure: S9RoP/cz2JOd/Mg/w21VddE9XIicOtDV3uSPLqMhMcv36OtMMqV5LfAt6LzwaZhBIInA4Fxvgp9v574d0Ig0P8rEdE7FQkvMo2I+tSpP+d3mklKK+MSlNxBtVBknFjdDynekEflaZzUdTU+jgVp+5tfiZDhezWf5wbo5rCq5NAM=
   - secure: FIbfSwqRnpOaEXjz8x5N13HL2DcaLSZQQ86Enb+GY+3oBqsWnDdM3UQxSwkcBUhsd0PsnFOXwi3NsJR9oEcVyWN1Yxg/sKPsGgUs8lA7FrP6wraPLavGpPFgvYZteM+P+vafj3KsIuwKgSseX5xLq4yJhtT/zylgG9i2uHKO1gY=
+  - secure: bLKLxIWo4l4KgtBdvhjzawLz/FeELHfYCX/YFqZehtaViYxj7meBvDvvQmN0yk5LMSg/QIxmM0bQNjovxHk8EqCsXm3ZWltu0m1DojEXaeZdLAf0ZWMeSBDMVB9ODfqtKWRuY+xFZ5foo0boAumoh1I5tivs/kkLpo2tdg3d2dA=
+  - secure: nv+EBogSXyUgTTl10lCCf8yzC/OyHuETUORcKdBB5WqnWL10zRznw6GuUfO+IOwWT0walW/gziTYhqgTqw8+u6l1gY7+zXnW6421RkmiuWBKHfJHzA6Y3ivXRI5+vBaYBafOWE6ZZ/VG8DUnooeMB05ji1KFvRJtjpi7LRoLr7w=
 script:
 - travis_retry mvn clean install site
 notifications:
@@ -18,5 +20,7 @@ cache:
   - $HOME/.m2
 after_success:
 - mvn clean test jacoco:report coveralls:report
+- mvn deploy --settings .travis/settings.xml
 - find /home/travis/.m2/repository/org/fiteagle/ -name \*.war -exec curl -X POST -u
-  $HTTP_USER:$HTTP_PASS -F "fileToUpload=@{}" https://services.av.tu-berlin.de/travis-upload/upload.php \;
+  $HTTP_USER:$HTTP_PASS -F "fileToUpload=@{}" https://services.av.tu-berlin.de/travis-upload/upload.php
+  \;
