--- a/federationManager/src/main/webapp/WEB-INF/web.xml
+++ b/federationManager/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,12 @@
     <servlet-name>javax.ws.rs.core.Application</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
+  <filter>
+		<filter-name>filter</filter-name>
+		<filter-class>org.fiteagle.core.federationManager.dm.ControlFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
