--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ after_success:
 addons:
   coverity_scan:
     project:
-      name: "fiteagle/core"
+      name: "FITeagle/core"
       description: "Build submitted via Travis CI"
     notification_email: fiteagle.dev@av.tu-berlin.de
     build_command_prepend: "mvn clean"
