--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
   - secure: eOf7nXdKlxwCr4fxnCosV/t6gZCgTE7llSfoYZxeni5+jhimT394Rb/k5XUc1U1BUExzC8xhuG+bRXs/sniA2jbokUPeIlCtoJvlOe9ePge8qX11kxgyCivE6iRTvA1w+UADYzGm7DEmaIUIgrF7wzeaZr9AtD5OpVQpm8L2cXE=
   - secure: GT82lHQfx5A82XrclGsisKHptPesPxo6WVWkHG+lJMr2nad2unLT8jOUL22qLy1cW6auK37DbgP8XbwT/7TRNF11eRdagFtod1GjChmqNig8/9MOd2Y/YYT4AJytucwXN/zQJcnrnZEPnngEOhkzYmnA8nXA5Nl0hgXKvE0Wq8A=
 script:
-- travis_retry mvn clean install site
-- ! '[ ${TRAVIS_PULL_REQUEST} = ''false'' ] && [ ${TRAVIS_BRANCH} = ''master'' ] &&
-  mvn clean deploy --settings .travis/settings.xml'
+- if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then travis_retry mvn clean install site ; fi
+- ! 'if [ ${TRAVIS_PULL_REQUEST} = ''false'' ] && [ ${TRAVIS_BRANCH} = ''master'' ] ; then
+  mvn clean deploy --settings .travis/settings.xml ; else true ; fi'
 notifications:
   slack:
     secure: lYVE1qJ5globXWgN6b7SGaZLBiFceaq1/zJPfobu56WtiOWbQQcpGrYgWkZK7hudZpUxTZr6TovkLnwMUeExmlvmlUt7Lt/bWrKVLk5J/KHN/kN3FT906H/rrpnFVtmKgTP+yS1xZVVsKVuRp/bA01N+9D5oNIYLbcTU6ggrA9o=
